--- a/src/main/resources/static/view/country.html
+++ b/src/main/resources/static/view/country.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="../css/bootstrap.min.css"/>
 <head>
     <meta charset="UTF-8">
     <title>Country Register</title>
 </head>
-<body>
-    <div>
-        <label>Name</label>
-        <input ng-model="country.name" type="text" placeholder="Antartica">
-    </div>
-    <div>
-        <label>Code</label>
-        <input ng-model="country.code" type="number" placeholder="00129">
-    </div>
-
-    <button ng-click="save()">save</button>
-
+<body class="container">
+<div class="register">
+    <form class="form-group">
+        <div class="well">
+            <h2>Country Register</h2>
+            <div class="form-group">
+                <label class="control-label">Name</label>
+                <input ng-model="country.name" type="text" class="form-control" placeholder="Antartica">
+            </div>
+            <div class="form-group">
+                <label class="control-label">Code</label>
+                <input ng-model="country.code" class="form-control" type="number" placeholder="00129">
+            </div>
+            <button class="btn btn-success" ng-click="save()">save</button>
+            <button class="btn btn-danger">cancel</button>
+        </div>
+    </form>
+</div>
+<style>
+    .register {
+        background-color: #00abeb;
+        padding: 15%;
+        margin-left: 20%;
+        float: inherit;
+    }
+</style>
 </body>
+
 </html>
